# bevy_prototype_sdf

./: Cargo.toml  README.md
src/: binary_serde.rs  dim2.rs  dim3.rs  lib.rs  plugin.rs  readable_serde.rs  render_asset.rs  sdf.wgsl  to_buffer.rs  tree.rs  writable.rs
