[package]
name = "bevy_prototype_sdf"
version = "0.1.0"
edition = "2021"

[features]
default = ["serialize", "bevy_asset"]
serialize = ["dep:serde", "bevy/serialize"]
bevy_asset = ["bevy/bevy_asset"]
shader = ["bevy/bevy_render", "bevy/bevy_asset"]

[dependencies]
bevy = {version = "0.15.0-rc", default-features=false}
serde = {version = "1.0", features=["serde_derive"], optional = true}
