[package]
name = "bevy_prototype_sdf"
description = "Experimental APIs for using Signed Distance Functions in bevy"
repository = "https://github.com/NiseVoid/bevy_prototype_sdf"
readme = "README.md"
keywords = ["bevy", "sdf"]
categories = ["game-development", "graphics", "mathematics"]
license = "MIT OR Apache-2.0"
version = "0.1.0"

edition = "2024"

[lints.clippy]
std_instead_of_core="forbid"
std_instead_of_alloc="forbid"

[features]
default = ["alloc", "bevy", "bevy_asset"]
alloc = []
bevy = ["alloc", "dep:bevy"]
serialize = ["dep:serde"]
bevy_asset = ["bevy", "bevy/bevy_asset", "serialize", "dep:thiserror", "dep:ron"]
shader = ["bevy/bevy_render", "bevy/bevy_asset"]

[dependencies]
bevy_math = {version = "0.18", default-features=false, features=["nostd-libm"]}
bevy = {version = "0.18", default-features=false, optional=true}
serde = {version = "1.0", features=["serde_derive"], optional=true}
arrayvec = {version = "0.7", default-features=false}
thiserror = {version = "2.0", default-features=false, optional=true}
ron = {version = "0.8", default-features=false, optional=true}

[dev-dependencies]
ron = {version = "0.8", default-features=false}
postcard = {version = "1.1", features = ["use-std"]}
